# BSM-Submodules

./: .gitmodules  CalcRGEs.sh  Dockerfile  GIT_MANAGEMENT  GIT_MANAGEMENT.md  MODEL  README.md  README_CREATES_NEW_MODEL.md  README_mybinder.md  SARAH-SSDM.ipynb  SARAH.ipynb  SARAH.py  SARAH_update.sh  SPHENO  SPheno.ipynb  butler  cmdlike.py  functions.sh  index.ipynb  install.sh  parameters.ipynb  particles.ipynb  pyproject.toml  test_model.sh  test_sm.sh
BSM/: BLDZ.ipynb  LesHouches.in.BLDZ  MODEL.ipynb  README.md  SM.nb  SSDM.ipynb  SSP_file_reader.ipynb  SSSFDM.xlsx  SimplifiedDM-SDFDM.ipynb  SimplifiedDM_SSSFDM.ipynb  THDM-III-HB.ipynb  Zee.ipynb  commands3.py  cta.csv  fermi1.csv  fermi2.csv  google_drive_tools.py  hep.py  omega.xlsx  output.sh  pdg.py  plot.ipynb
BSM/Input_Files/: LesHouches.in.BLDZ  SPheno.spc.BLDZ
BSM/SPHENO/SM/: Boundaries_SM.f90  BranchingRatios_SM.f90  CouplingsCT_SM.f90  CouplingsForDecays_SM.f90  Couplings_SM.f90  HiggsCS_SM.f90  InputOutput_SM.f90  LoopCouplings_SM.f90  LoopMasses_SM.f90  Makefile  Model_Data_SM.f90  OneLoopDecays_SM.f90  RGEs_SM.f90  RunSM_SM.f90  SPhenoSM.f90  Settings.f90  TadpoleEquations_SM.f90  TreeLevelMasses_SM.f90  TreeLevel_Decays_SM.f90
BSM/SPHENO/SimplifiedDMSSSFDM/: Boundaries_SimplifiedDMSSSFDM.f90  BranchingRatios_SimplifiedDMSSSFDM.f90  CouplingsCT_SimplifiedDMSSSFDM.f90  CouplingsForDecays_SimplifiedDMSSSFDM.f90  (+15 more)
BSM/xBIT/: SSDM.json  SSDM_MLS.json  run.sh
JSON/: SM.json  SMp.json  SPheno.json  fullparametersnames.json  fullparticles.json  fullparticlesnames.json  newparticles.json  particles.json
(+175 files in other folders)
