[tool.poetry]
name = "bsm-submodules"
version = "0.1.0"
description = ""
authors = ["Diego Restrepo <restrepo@udea.edu.co>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0"
pyslha = "^3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
